支持右键选中内容进行复制，向量存储依赖